@@ -13,9 +13,11 @@ C
 C @author Diethelm Wuertz 
 C @author Christophe Dutang
 C
+C Copyright (C) Jan. 2020, Christophe Dutang, remove array limit issues and unused variables
+C "gfortran -fno-optimize-sibling-calls  -fpic  -g -O2 -mtune=native -Wall -fallow-argument-mismatch LowDiscrepancy.f" without error.
+C
 C Copyright (C) Apr. 2011, Christophe Dutang, remove implicit declaration: the code now pass
-C > gfortran -c -fsyntax-only -fimplicit-none LowDiscrepancy.f 
-C without error.
+C "gfortran -c -fsyntax-only -fimplicit-none LowDiscrepancy.f" without error.
 C
 C Copyright (C) Oct. 2009, Christophe Dutang, slightly modified (better accuracy and speed).
 C
